new proj/src/objects/GE_HQ_TAM_SAS__c.object
<CustomObject>
    <description>This Object contains TAM and SAS Information at each account level</description>
    <fields>
        <fullName>GE_HQ_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>TAM/SAS</relationshipLabel>
        <relationshipName>TAM_SAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Buss_Tier1__c</fullName>
        <label>Tier 2 P&amp;L</label>
        <picklist>
            <controllingField>GE_HQ_Buss_Tier__c</controllingField>
            <picklistValues>
                <fullName>Industrial Solutions (IS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Energy (DE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converteam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turbo Machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PII Pipeline Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Services (GS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drilling &amp; Production (D&amp;P)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measurement &amp; Control (M&amp;C)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas Engines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aero Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thermal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Hitachi Nuclear Energy (GEH)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Gen Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Buss_Tier__c</fullName>
        <label>Tier 1 P&amp;L</label>
        <picklist>
            <picklistValues>
                <fullName>Energy Management (EM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil &amp; Gas (O&amp;G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power &amp; Water (P&amp;W)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_IsInserted__c</fullName>
        <defaultValue>&apos;NO&apos;</defaultValue>
        <label>IsInserted</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_HQ_Tier1_P_L__c</fullName>
        <label>Tier1 - P&amp;L</label>
        <picklist>
            <picklistValues>
                <fullName>ES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&amp;G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P&amp;W</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Tier2_P_L__c</fullName>
        <label>Tier2 - P&amp;L</label>
        <picklist>
            <controllingField>GE_HQ_Tier1_P_L__c</controllingField>
            <picklistValues>
                <fullName>Aero</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;PS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dresser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Env</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gasification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jenbacher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nuclear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PII</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thermal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water ES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water IWS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wind Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wind Services</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>TAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Year__c</fullName>
        <label>Year</label>
        <picklist>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>TAM/SAS</label>
    <nameField>
        <displayFormat>TS-{000000}</displayFormat>
        <label>TAM/SAS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TAM/SAS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>